Improve pdk 8x8 multiplication efficiency, based on patch #470 by Konstantin Kim.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14584 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2024-01-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* device/lib/_divuchar.c,
+	  device/lib/_moduchar.c:
+	  Fix optimization turning division support troutines into infinite loops.
+	* device/lib/pdk*/Makefile.in,
+	  device/lib/pdk*/_muluchar.s:
+	  Improve pdk 8x8 multiplication efficiency, based on patch #470 by Konstantin Kim.
+
 2024-01-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/tests/satcounteroverflow.c.in:
