replace all instances of emitLabel() with safeEmitLabel().
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14586 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-08 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c:
+	  replace all instances of emitLabel() with safeEmitLabel().
+
 2024-01-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* device/lib/_divuchar.c,
