--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,10 @@
 
 	* src/mos6502/gen.c:
 	  replace all instances of emitLabel() with safeEmitLabel().
-
+ 	* src/mos6502/gen.c,
+ 	  src/mos6502/main.c:
+      enable last operation flag tracking.
+ 
 2024-01-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* device/lib/_divuchar.c,
