--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-08 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/ports/pic16/spec.mk:
+	  pic16 regression test infrastructure fix, from patch #471 by Jonathon Hall.
+
 2024-01-08 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
