enable carry flag tracking.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14590 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@
  	* src/mos6502/gen.c,
  	  src/mos6502/main.c:
       enable last operation flag tracking.
+   	* src/mos6502/gen.c:
+	  enable carry flag tracking.
  
 2024-01-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
