--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-09 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c:
+	  additional carry flag tracking optimizations.
+	  
 2024-01-08 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/ports/pic16/spec.mk,
