Improve debug messages.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14593 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 2024-01-09 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
-	  additional carry flag tracking optimizations.
+	  Additional carry flag tracking optimizations.
+  	* src/mos6502/gen.c:
+	  Improve debug messages.
 	  
 2024-01-08 Philipp Klaus Krause <philipp@colecovision.eu>
 
