Implement a few 65C02 optimizations.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14598 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-10 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c:
+	  Implement a few 65C02 optimizations.
+	  
 2024-01-09 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
