Fix constanRange regression failure for mos6502-stack-auto.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14607 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-13 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c:
+	  Fix constanRange regression failure for mos6502-stack-auto. 
+	  
 2024-01-12 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
