Add several new rules that take advantage of if used().
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14609 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	  Fix constanRange regression failure for mos6502-stack-auto.
 	* src/mos6502/ralloc2.cc:
 	  Add instruction cost for IPUSH_VALUE_AT_ADDRESS icode.
+	* src/mos6502/peep.def:
+	  Add several new rules that take advantage of if used().
 	  
 2024-01-12 Gabriele Gorla <gorlik@yahoo.com>
 
