Implement special case for genCompare when one operand is 0
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14611 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* src/mos6502/gen.c:
 	  Fix constanRange regression failure for mos6502-stack-auto.
+	  Implement special case for genCompare < 0
 	* src/mos6502/ralloc2.cc:
 	  Add instruction cost for IPUSH_VALUE_AT_ADDRESS icode.
 	* src/mos6502/peep.def:
