Rearrange memory segments to support systems without ROM.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14612 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,7 +19,9 @@
 	  support/regression/tests/lonesha256.c,
 	  support/regression/tests/tinyaes.c.in:
 	  disable tests failing in the mos6502-stack-auto port due to stack size limitation.
-	  
+  	* src/mos6502/main.c:
+      Rearrange memory segments to support systems without ROM space.
+      	  
 2024-01-12 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
