Remove dead code to support registers in reverse order.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14613 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,9 @@
 	  disable tests failing in the mos6502-stack-auto port due to stack size limitation.
   	* src/mos6502/main.c:
       Rearrange memory segments to support systems without ROM space.
+   	* src/mos6502/gen.c,
+   	  src/mos6502/ralloc.h:
+   	  Remove dead code to support registers in reverse order.
       	  
 2024-01-12 Gabriele Gorla <gorlik@yahoo.com>
 
