Optimize pdk register packing for some operations on __sfr.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14614 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-01-14 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/hc08/main.c:
+	  Optimize pdk register packing for some operations on __sfr.
+
 2024-01-13 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
