Fix ChangeLog entry for previous commit.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14615 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 2023-01-14 Philipp Klaus Krause <philipp@colecovision.eu>
 
-	* src/hc08/main.c:
-	  Optimize pdk register packing for some operations on __sfr.
+	* src/pdk/gen.c,
+	  src/pdk/ralloc.c,
+	  src/pdk/ralloc2.cc:
+	  Optimize pdk register packing for some operations on __sfr (part of RFE #801).
 
 2024-01-13 Gabriele Gorla <gorlik@yahoo.com>
 
