--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-15 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/peep.def:
+	  Fix bug in peephole load 12 rule.
+
 2023-01-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/scripts/sdcc.nsi:
