Fix pdk code generation issues, bug #3697.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14637 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-22 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/pdk/gen.c:
+	  Fix pdk code generation issues, bug #3697.
+
 2024-01-16 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* src/Makefile.in:
