Export 32-bit addresses from z80 assembler (instead of 24-bit).
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14639 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* src/pdk/gen.c:
 	  Fix pdk code generation issues, bug #3697.
+	* sdas/asz80/z80mch.c:
+	  Export 32-bit addresses from z80 assembler (instead of 24-bit).
 
 2024-01-16 Benedikt Freisen <b.freisen AT gmx.net>
 
