--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-26 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* sdas/asgb/gbmch.c:
+	  Export 32-bit addresses from gb assembler (instead of 24-bit).
+
 2024-01-22 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/pdk/gen.c:
