Fix ChangeLog entry for previous commit.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14641 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2024-01-26 Philipp Klaus Krause <philipp@colecovision.eu>
 
-	* sdas/asgb/gbmch.c:
+	* sdas/asgb/gbmch.c
+	  .version,
+	  doc/sdccman.lyx:
 	  Export 32-bit addresses from gb assembler (instead of 24-bit).
 
 2024-01-22 Philipp Klaus Krause <philipp@colecovision.eu>
