--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-27 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/ralloc.c:
+	  Small cleanup of m6502_dirtyReg.
+
 2024-01-26 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* sdas/asgb/gbmch.c
