Imporvements to genCmp.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14643 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* src/mos6502/ralloc.c:
 	  Small cleanup of m6502_dirtyReg.
+   	* src/mos6502/gen.c:
+   	  Imporvements to genCmp.
 
 2024-01-26 Philipp Klaus Krause <philipp@colecovision.eu>
 
