--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-27 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* sdas/asz80/z80mch.c:
+	  Fix bug #3700.
+
 2024-01-27 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/ralloc.c:
