--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2024-01-27 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c,
+	  src/mos6502/ralloc.h:
+	  Remove dead references to M6502MASK_REV.
+
 2024-01-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* sdas/asz80/z80mch.c:
