--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-28 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c:
+	  refactor asmopToBool().
+
 2024-01-27 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c,
