Improvements to genAnd().
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14647 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 2024-01-28 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
-	  refactor asmopToBool().
+	  Refactor asmopToBool().
+  	* src/mos6502/gen.c:
+  	  Improvements to genAnd().
 
 2024-01-27 Gabriele Gorla <gorlik@yahoo.com>
 
