Improve ldw use in f8 codegen.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@15202 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-01-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/f8/gen.c:
+	  Improve ldw use in f8 codegen.
+
+2024-01-02 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* sdas/asf8/f8mch.c,
 	  sim/ucsim/src/sims/f8.src/glob.cc:
 	  f8 ldw instruction fixes for assembler and simulator.
