--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2024-01-09 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCicode.c,
+	  src/SDCCsymt.c,
+	  src/SDCCsymt.h,
+	  support/regression/MakeList,
+	  support/regression/tests/bug-3601.c:
+	  Fix bug #3601.
+
 2024-01-08 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/tests/strnlen.c,
