Fix z80 part of bug #3814.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@15215 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 	  support/regression/MakeList,
 	  support/regression/tests/bug-3601.c:
 	  Fix bug #3601.
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3814.c:
+	  Fix z80 part of bug #3814.
 
 2024-01-08 Philipp Klaus Krause <philipp@colecovision.eu>
 
