--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-11 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/bug-3601.c:
+	  Commit fix for typo in disabling of test for low-memory devices.
+
 2024-01-09 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCicode.c,
