Fix mos6502 part of bug #3814.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@15222 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-12 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/mos6502/gen.c:
+	  Fix mos6502 part of bug #3814.
+
 2024-01-11 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/tests/bug-3601.c:
