Implement new octal and escape sequence syntax (C2y, n3353, see RFE #977).
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@15230 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,18 @@
 
 	* doc/sdccman.lyx,
 	  src/SDCC.lex,
+	  src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  src/SDCCutil.c,
+	  src/SDCCutil.h,
+	  src/SDCCval.c,
+	  support/regression/tests/octal.c:
+	  Implement new octal and escape sequence syntax (C2y, n3353, see RFE #977).
+
+2025-01-18 Benedikt Freisen <b.freisen AT gmx.net>
+
+	* doc/sdccman.lyx,
+	  src/SDCC.lex,
 	  src/SDCC.y,
 	  src/SDCCast.c,
 	  src/SDCCast.h,
