Apply patch #485 by bbbbbr to properly document the -N flag.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@15231 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2025-01-18 Benedikt Freisen <b.freisen AT gmx.net>
 
+	* sdas/asxxsrc/asmain.c:
+	  Apply patch #485 by bbbbbr to properly document the -N flag.
+
+2025-01-18 Benedikt Freisen <b.freisen AT gmx.net>
+
 	* doc/sdccman.lyx,
 	  src/SDCC.lex,
 	  src/SDCCerr.c,
