Implement if-declarations (C2y, n3356, see RFE #979).
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@15233 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2025-01-19 Benedikt Freisen <b.freisen AT gmx.net>
+
+	* doc/sdccman.lyx,
+	  src/SDCC.y,
+	  src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  src/SDCCsymt.c,
+	  src/SDCCsymt.h,
+	  support/regression/tests/if-decl.c:
+	  Implement if-declarations (C2y, n3356, see RFE #979).
+
 2025-01-18 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* support/regression/Makefile.in:
