Improve Rabbit port documentation.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@15234 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-01-19 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* doc/sdccman.lyx:
+	  Improve Rabbit port documentation.
+
 2025-01-19 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* doc/sdccman.lyx,
