--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-01-19 Benedikt Freisen <b.freisen AT gmx.net>
+
+	* doc/sdccman.lyx:
+	  Clarify linking order resulting from mixed command lines.
+
 2025-01-19 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* doc/sdccman.lyx:
